<resources>
    <string name="app_name">News App</string>
    <string name="no_news">No news available, please reload the app or check after some time .</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For Category Preference -->
    <string name="settings_min_category_label">Category</string>
    <string name="settings_min_category_key" translatable="false">category</string>
    <string name="settings_min_category_default" translatable="false">@string/settings_category_news_value</string>

    <string name="settings_category_news_label">News (Default)</string>
    <string name="settings_category_news_value" translatable="false">news</string>

    <string name="settings_category_sport_label">Sports</string>
    <string name="settings_category_sport_value" translatable="false">sport</string>

    <string name="settings_category_business_label">Business</string>
    <string name="settings_category_business_value" translatable="false">business</string>

    <string name="settings_category_education_label">Education</string>
    <string name="settings_category_education_value" translatable="false">education</string>

    <string name="settings_category_film_label">Films</string>
    <string name="settings_category_film_value" translatable="false">film</string>

    <string name="settings_category_politics_label">Politics</string>
    <string name="settings_category_politics_value" translatable="false">politics</string>

    <!-- Strings For Page_Size Preference -->
    <string name="settings_page_size_label">Change the number of items displayed per page</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">@string/settings_page_size_ten_value</string>

    <string name="settings_page_size_ten_label">Ten (Default)</string>
    <string name="settings_page_size_ten_value" translatable="false">10</string>

    <string name="settings_page_size_twenty_label">Twenty</string>
    <string name="settings_page_size_twenty_value" translatable="false">20</string>

    <string name="settings_page_size_thirty_label">Thirty</string>
    <string name="settings_page_size_thirty_value" translatable="false">30</string>

    <string name="settings_page_size_forty_label">Forty</string>
    <string name="settings_page_size_forty_value" translatable="false">40</string>

    <string name="settings_page_size_fifty_label">Fifty</string>
    <string name="settings_page_size_fifty_value" translatable="false">50</string>
</resources>

