<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <ListPreference
        android:defaultValue="@string/settings_min_category_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_min_category_key"
        android:title="@string/settings_min_category_label" />
    <ListPreference
        android:defaultValue="@string/settings_page_size_default"
        android:entries="@array/settings_page_size_labels"
        android:entryValues="@array/settings_page_size_values"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />
</PreferenceScreen>